<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20sp"
    android:background="@mipmap/sliding_landing_back">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp">

        <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/location_oval3">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/location_oval2"
                android:layout_centerInParent="true"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/location_white_oval"
                android:layout_centerInParent="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/location_arrow"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/location_white_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topLayout"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/off_location_services"/>

        <TextView
            android:id="@+id/current_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/location_services_on"
            android:textSize="17sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/locationColor"
            android:layout_marginBottom="30sp"
            android:textAlignment="center"
            android:text="@string/current_location"/>


        <Button
        android:id="@+id/location_services_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/white_rounded_button"
        android:textAllCaps="false"
        android:clickable="true"
        android:textColor="#000000"
        android:textSize="15sp"
        android:text="@string/on_location_services"
        android:onClick="locationServicesClick"/>

    </RelativeLayout>

</LinearLayout>