<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.digibarber.app.activities.ChangePasswordActivity"
    tools:ignore="MissingPrefix">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/arrow_back_margin_left"

android:layout_centerVertical="true"            android:clickable="true"
            android:onClick="backClick"
            android:padding="@dimen/arrow_back_padding"
            android:src="@mipmap/back" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/text_center_margin_top"
            android:src="@mipmap/password_text" />

        <ImageView
            android:id="@+id/iv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/text_right_margin_right"
android:layout_centerVertical="true"            android:clickable="true"
            android:padding="@dimen/arrow_back_padding"
            android:src="@mipmap/done" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@mipmap/password" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_toRightOf="@+id/password_icon"
            android:orientation="vertical">

            <EditText
                android:id="@+id/password"
                fontPath="fonts/sf_ui_text_regular.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Current Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FF1D1D26"
                android:textColorHint="#B1B1B1" />


            <TextView
                android:id="@+id/tv_your_pass_error"
                fontPath="fonts/avenir_font.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="-5dip"
                android:text="@string/empty_your_password"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:visibility="gone" />


        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/password_icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:src="@mipmap/password" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/password_icon1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_password"
                fontPath="fonts/sf_ui_text_regular.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="New Password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:singleLine="true"
                android:textColor="@color/search_heading_color"
                android:textColorHint="@color/loginTextColor" />

            <TextView
                android:id="@+id/tv_pass_new_error"
                fontPath="fonts/avenir_font.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_password"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="-5dip"
                android:text="@string/empty_new_password"
                android:textColor="@color/red"
                android:textSize="12sp"
                android:visibility="gone" />
            <TextView
                android:id="@+id/tv_your_pass_changed"
                fontPath="fonts/avenir_font.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_password"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="-5dip"
                android:text="@string/empty_password_change_successful"
                android:textColor="@color/green_success"
                android:textSize="12sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_tick_success"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_alignEnd="@+id/tv_your_pass_changed"
                android:layout_marginEnd="-15dp"
                android:layout_marginTop="42dp"
                android:src="@mipmap/tick_success"
                android:visibility="gone" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/password_icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:src="@mipmap/password" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/password_icon2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_password_again"
                fontPath="fonts/sf_ui_text_regular.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="New Password Again"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:singleLine="true"
                android:textColor="#FF1D1D26"
                android:textColorHint="#B1B1B1" />

            <TextView
                android:id="@+id/tv_password_not_macth"
                fontPath="fonts/avenir_font.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_password_again"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="-5dp"
                android:text="@string/empty_new_not_match_password"
                android:textColor="@color/red_light"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_reset"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="40dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:src="@drawable/clock_detail_up" />

        <TextView
            android:id="@+id/tv_restby_phone"
            fontPath="fonts/sf_ui_text_light.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:clickable="true"
            android:padding="5dip"
            android:text="Reset password by phone"
            android:textColor="@color/doneTextColor"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
